=== HEAD

* Apply the correct pragmas when connecting to SQLite via the Amalgalite and Swift adapters (jeremyevans)

* Fix bound variable usage for some types (e.g. Date) when used outside of prepared statements on SQLite (jeremyevans)

* Work around SQLite column naming bug when using subselects (jeremyevans)

* Make prepared_statements plugin work with adapters that require type specifiers for variable placeholders, such as oracle (jeremyevans)

* Add savepoint support to the generic JDBC transaction support (used by 6 jdbc subadapters) (jeremyevans)

* Add native prepared statement support to the oracle adapter (jeremyevans)

* Support sharding correctly by default when using transactions in model saving/destroying (jeremyevans)

* Add Database#in_transaction? method for checking if you are already in a transaction (jeremyevans)

* Add after_commit, after_rollback, after_destroy_commit, and after_destroy_rollback hooks to Model objects (jeremyevans)

* Add after_commit and after_rollback hooks to Database objects (jeremyevans)

* Support savepoints inside prepared transactions on MySQL (jeremyevans)

* Support opening transactions to multiple shards of the same Database object in the same Thread (jeremyevans)

* Add Sequel.transaction for running transactions on multiple databases at the same time (jeremyevans)

* Support :rollback => :always option in Database#transaction to always rollback the transaction (jeremyevans)

* Support :rollback => :reraise option in Database#transaction to reraise the Sequel::Rollback exception (jeremyevans)

* Add support for connecting to Apache Derby databases using the jdbc adapter (jeremyevans)

* Add support for connecting to HSQLDB databases using the jdbc adapter (jeremyevans)

* Fix inserting all default values into a table on DB2 (jeremyevans)

* Add :qualify option to many_to_one associations for whether to qualify the primary key column with the associated table (jeremyevans)
